Modified readme - added notice on licenses

--- a/README
+++ b/README
@@ -24,3 +24,9 @@ This fellow has published for anyone to use a very, extremely, masterfully,
 ..., well crafted assets package. It has tons of graphics all assuming some
 sort of top-down shooter. It has graphics for two kinds of shooters: space
 ships shooters and humanoid with guns shooters.
+
+About License
+=============
+Even though the software (source files and related documentation) is under
+the MIT license, the license tatermand uses for his own stuff is CC0 (check
+his profile page @ opengameart.org).
