Implemented a simple animation for plazma arrow shots
Check the plazma_arrow_shot_anim folder for the code.

The functions around controlling a plazma arrow shot animation aren't
yet the best (of course - first attempt here), but they're getting
there.

--- a/README
+++ b/README
@@ -10,7 +10,7 @@ rotate a bunch of them according to circular motions of all kinds.
 
 - radial_shot: From the effects assets, take the blue plazma arrow blue and
 move a bunch of them radially outwards. The final result looks like a "nova"
-spell from diablo 2.
+spell.
 
 Youtube Videos
 ==============
