Added youtube link to plazma_arrow_shot_anim to README

--- a/README
+++ b/README
@@ -23,7 +23,7 @@ video below.
 Youtube Videos
 ==============
 - rotating_swirls: https://www.youtube.com/watch?v=6UjjLtdaVjg
-- plazma_arrow_shot_snapshots:
+- plazma_arrow_shot_snapshots: https://www.youtube.com/watch?v=I9xglCZQMmI
 
 Tatermand
 =========
