--- a/README
+++ b/README
@@ -24,11 +24,18 @@ video below.
 separete projects elsewhere). It's supposed to simulate simple impact
 explosions (like when a lazer shot hits a wall).
 
+- walking_char: My first attempt at an animating walking character. The idea
+is to animate one of the topdown-shooter character by Tatermand. It should
+"feel" like he's walking, limbs should move back/forward accordingly. It
+doesn't feel as good right now, but I'll improve on it later. The major
+purpose here was to get this working.
+
 Youtube Videos
 ==============
 - rotating_swirls: https://www.youtube.com/watch?v=6UjjLtdaVjg
 - plazma_arrow_shot_snapshots: https://www.youtube.com/watch?v=I9xglCZQMmI
 - sparts003: https://www.youtube.com/watch?v=B7wuw_E_lgk
+- walking_char: https://www.youtube.com/watch?v=GgV71qMumtk
 
 Tatermand
 =========
@@ -44,3 +51,9 @@ About License
 Even though the software (source files and related documentation) is under
 the MIT license, the license tatermand uses for his own stuff is CC0 (check
 his profile page @ opengameart.org).
+
+.gitignore
+==========
+You may notice that I don't have a .gitignore in here. This is mostly
+because I'm using git to just track this whole thing. Even pieces of it
+that I don't care about, like the executables or intermediate object files.
