--- a/README
+++ b/README
@@ -30,11 +30,12 @@ is to animate one of the topdown-shooter character by Tatermand. It should
 doesn't feel as good right now, but I'll improve on it later. The major
 purpose here was to get this working.
 
-Youtube Videos
-==============
+Videos
+======
 - rotating_swirls: https://www.youtube.com/watch?v=6UjjLtdaVjg
 - plazma_arrow_shot_snapshots: https://www.youtube.com/watch?v=I9xglCZQMmI
 - sparts003: https://www.youtube.com/watch?v=B7wuw_E_lgk
+- sparts003: https://personalphao.wordpress.com/2015/01/27/explosions-ish-particles-systems/
 - walking_char: https://www.youtube.com/watch?v=GgV71qMumtk
 
 Tatermand
